# cli_app

./: CMakeLists.txt  README.md  cli_app.vix  vix.json
examples/: basic_cli.cpp  flags_and_options.cpp  json_output.cpp  subcommands.cpp
include/cli_app/: cli_app.hpp
tests/: test_basic.cpp
